@@ -123,7 +123,7 @@ if ($step == '1') {
     if (empty($answer)) {
         stderr("{$lang['stderr_errorhead']}", "{$lang['stderr_error6']}");
     }
-    if (!password_verify($answer, $fetch['hintanswer'])) {
+    if (!password_verify($answer, $fetch['hintanswer']) && md5($answer) !== $fetch['hintanswer']) {
         $ip = getip();
         $useragent = $_SERVER['HTTP_USER_AGENT'];
         $msg = '' . htmlsafechars($fetch['username']) . ', on ' . get_date(TIME_NOW, '', 1, 0) . ", {$lang['main_message']}" . "\n\n{$lang['main_message1']} " . $ip . ' (' . @gethostbyaddr($ip) . ')' . "\n {$lang['main_message2']} " . $useragent . "\n\n {$lang['main_message3']}\n {$lang['main_message4']}\n";
